array elements as counters

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /netbeans/JavaApplication4/nbproject/private/
 /netbeans/JavaApplication4/build/
+/netbeans/JavaLibrary1/nbproject/private/
+/JavaApplication5/nbproject/private/
+/JavaApplication5/build/
