initialized student management system project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /netbeans/JavaLibrary1/nbproject/private/
 /JavaApplication5/nbproject/private/
 /JavaApplication5/build/
+/school management system/nbproject/private/
+/student management/nbproject/private/
