--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /JavaApplication5/build/
 /school management system/nbproject/private/
 /student management/nbproject/private/
+/student management/build/
